# inkling

./: .gitignore  README.md  config.example.toml
daemon/: Cargo.toml
daemon/inkling/: Cargo.toml
daemon/inkling-core/: Cargo.toml
daemon/inkling-core/src/: config.rs  dissolve.rs  lib.rs  surface.rs  toggle.rs
daemon/inkling/src/: daemon.rs  imagegen.rs  main.rs
daemon/inkling/src/device/: capture.rs  mod.rs  touch.rs  uinput.rs
scribed/: Cargo.toml
scribed/scribed/: Cargo.toml
scribed/scribed-core/: Cargo.toml
scribed/scribed-core/src/: geometry.rs  lib.rs  surface.rs  toggle.rs  vector.rs  watch.rs
scribed/scribed/src/: daemon.rs  imagegen.rs  main.rs
scribed/scribed/src/device/: capture.rs  uinput.rs
xovi-ext/: README.md  deploy.sh
xovi-ext/inklingfb/: main.c
xovi-ext/scribefb/: main.c
