[package]
name = "scribed"
version.workspace = true
edition.workspace = true

[[bin]]
name = "scribed"
path = "src/main.rs"

[dependencies]
scribed-core = { path = "../scribed-core" }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", default-features = false, features = ["tls"] }
base64 = "0.22"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
input-linux = "0.7"
libc = "0.2"
